@@ -1,8 +1,11 @@
 package com.blockhead7360.mc.wedbars.game;
 
 import org.bukkit.Location;
+import org.bukkit.entity.Item;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.metadata.FixedMetadataValue;
 
+import com.blockhead7360.mc.wedbars.WedBars;
 import com.blockhead7360.mc.wedbars.api.events.GeneratorSpawnItemEvent;
 
 public class Generator {
@@ -16,7 +19,7 @@ public class Generator {
 		
 		this.location = location;
 		this.speed = speed;
-		this.curTimeLeft = speed;
+		this.curTimeLeft = 1;
 		
 	}
 
@@ -59,7 +62,8 @@ public class Generator {
 		
 		if (gsie.isCancelled()) return;
 		
-		location.getWorld().dropItem(location, item);
+		Item i = location.getWorld().dropItem(location, item);
+		i.setMetadata("gen", new FixedMetadataValue(WedBars.getInstance(), true));
 		
 		
 		
